templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-second-simple-flask-app
  labels:
    app: helm-second-simple-flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helm-second-simple-flask-app
  template:
    metadata:
      labels:
        app: helm-second-simple-flask-app
    spec:
      containers:
      - name: helm-second-simple-flask-app
        #image: dvorkinguy/second-simple-flask-app:build-8
        image: dvorkinguy/second-simple-flask-app:latest
        ports:
        - containerPort: 5000
